KubernetsFiles/chat.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: kanban
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: walymb/chat:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "600m"
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: keys-volume
          mountPath: /app/keys
      volumes:
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: kanban
spec:
  selector:
    app: chat
  ports:
  - port: 8090
    targetPort: 8090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: kanban
  labels:
    name: chat-ingress
spec:
  rules:
  - host: chat.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chat-service
            port: 
              number: 8090
