KubernetsFiles/kanban.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban
  namespace: kanban
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kanban
  template:
    metadata:
      labels:
        app: kanban
    spec:
      containers: 
      - name: kanban
        image: walymb/kanbanapp:latest
        resources:
          limits:
            memory: "400Mi"
            cpu: "600m"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: keys-volume
          mountPath: /app/keys
      volumes:
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: kanban-service
  namespace: kanban
spec:
  selector:
    app: kanban
  ports:
  - port: 9090
    targetPort: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-ingress
  namespace: kanban
  labels:
    name: kanban-ingress
spec:
  rules:
  - host: kanban.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kanban-service
            port: 
              number: 9090
