KubernetsFiles/mongo-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kanban
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        command: ["mongod"]
        args: ["--dbpath", "/data/db"]
        resources:
          limits:
            memory: "300Mi"
            cpu: "600m"
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service 
  namespace: kanban
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    nodePort: 32019
  selector:
    app: mongo
  type: NodePort
status:
  loadBalancer: {}


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: kanban
  labels:
    name: mongo-ingress
spec:
  rules:
    - host: mongo.rancher.waly.dev.br
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-service
                port: 
                  number: 27017
