KubernetsFiles/mysql.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: kanban
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "300Mi"
              cpu: "600m"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim


---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: kanban
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: kanban
  labels:
    name: mysql-ingress
spec:
  rules:
  - host: mysql.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mysql-service
            port: 
              number: 3306
